Adding css properties to class "source" and "link_source"
Added color and removed underline on text link

--- a/style.css
+++ b/style.css
@@ -109,3 +109,11 @@ h5 {
   color: #2e83b4;
 }
 
+.source {
+  color: #2e83b4;
+  font-weight: bold;
+}
+
+.link_source {
+  text-decoration: none;
+}
