Added color to "source_name" class
Removed color from "source" and added to link properties

--- a/style.css
+++ b/style.css
@@ -110,10 +110,14 @@ h5 {
 }
 
 .source {
-  color: #2e83b4;
   font-weight: bold;
 }
 
 .link_source {
   text-decoration: none;
+  color: #2e83b4;
+}
+
+.source_name {
+  color: #2e83b4;
 }
