--- a/style.css
+++ b/style.css
@@ -57,7 +57,10 @@ body {
   margin-top: 20px;
   background: linear-gradient(-225deg, #cbbacc 0%, #2580b3 100%);
   max-width: fit-content;
-  width: 100%;
+}
+
+div.col-2 {
+  text-align: center;
 }
 
 .city {
@@ -94,11 +97,13 @@ h5 {
 .weather_forecast {
   display: block;
   margin: 0 auto;
-  padding: 5px;
+  padding: 10px;
   margin-top: 20px;
   margin-bottom: 70px;
   background: white;
+  border: solid;
   border-color: #2e83b4;
+  border-width: 0.5px;
 }
 
 .weekday {
